--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   zookeeper:
     image: wurstmeister/zookeeper:latest
@@ -18,3 +19,15 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  backend:  
+    build:  
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "4000:4000" 
+    environment:
+      KAFKA_BROKER_URL: "kafka:9093" 
+    depends_on:
+      - zookeeper  
+      - kafka      
